deploy/kubernetes/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: eventms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /api/websocket(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: websocket-api
          servicePort: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: graphqlservice
          servicePort: 80
      - path: /rabbitmq(/|$)(.*) #admin rabbit
        pathType: Prefix
        backend:
          serviceName: message-queue
          servicePort: 15672   
      - path: /()(.*)
        pathType: Prefix
        backend:
          serviceName: frontendservice
          servicePort: 80
